# Colorectal-Cancer-Prediction

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  mlops_pipeline.yaml  pyproject.toml
artifacts/models/: model.pkl
artifacts/processed/: scaler.pkl  y_test.pkl  y_train.pkl
kubeflow_pipeline/: mlops_pipeline.py
notebook/: notebook.ipynb
src/: custom_exception.py  data_processing.py  model_training.py
templates/: index.html
