[project]
name = "colorectalcancersurvivalprediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "ipykernel>=7.2.0",
    "joblib>=1.5.3",
    "kfp>=2.15.2",
    "matplotlib>=3.10.8",
    "mlflow>=2.15.1",
    "numpy>=2.4.2",
    "pandas>=2.2.3,<3.0.0",
    "protobuf>=6.33.5",
    "scikit-learn>=1.5.0,<1.7.0",
    "seaborn>=0.13.2",
]
